# VideoRecorder

./: .gitignore  settings.gradle
app/: build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  ChangbaRecordingPreviewScheduler.cpp  MusicDecoder.cpp  NativeRecordProcessor.cpp  VideoStudio.cpp  com_changba_songstudio_Videostudio.h  com_changba_songstudio_decoder_MusicDecoder.h  com_changba_songstudio_recorder_NativeRecordProcessor.h  com_changba_songstudio_recording_camera_preview_ChangbaRecordingPreviewScheduler.h  native-lib.cpp
app/src/main/cpp/camera_preview/: mv_recording_preview_controller.cpp
app/src/main/cpp/common/: CommonTools.h
app/src/main/cpp/ffmpeg/2.7.7/arm64-v8a/lib/pkgconfig/: libavcodec.pc  libavfilter.pc  libavformat.pc  libavutil.pc  libswresample.pc  libswscale.pc
app/src/main/cpp/ffmpeg/2.7.7/armeabi-v7a/lib/pkgconfig/: libavcodec.pc  libavfilter.pc  libavformat.pc  libavutil.pc  libswresample.pc  libswscale.pc
app/src/main/cpp/lib/fdk-aac/arm64-v8a/lib/: libfdk-aac.la
app/src/main/cpp/lib/fdk-aac/arm64-v8a/lib/pkgconfig/: fdk-aac.pc
app/src/main/cpp/lib/fdk-aac/armeabi-v7a/lib/: libfdk-aac.la
app/src/main/cpp/lib/fdk-aac/armeabi-v7a/lib/pkgconfig/: fdk-aac.pc
app/src/main/cpp/lib/x264/arm64-v8a/lib/pkgconfig/: x264.pc
app/src/main/cpp/lib/x264/armeabi-v7a/lib/: libx264.so.157
app/src/main/cpp/lib/x264/armeabi-v7a/lib/pkgconfig/: x264.pc
app/src/main/java/com/example/videorecorder/: AlwaysMarqueeTextView.java  MainActivity.java  Permission.java  Song.java  SongSelectionActivity.java  VideoRecorderActivity.java
app/src/main/java/com/example/videorecorder/songstudio/: PacketBufferTimeEnum.java  Songstudio.java  Videostudio.java
app/src/main/java/com/example/videorecorder/songstudio/decoder/: Mp3Decoder.java  MusicDecoder.java
app/src/main/java/com/example/videorecorder/songstudio/media/: AudioRecordController.java  AudioRecordEchoController.java  SoundRecordController.java  SoundTrackController.java
app/src/main/java/com/example/videorecorder/songstudio/player/accompany/: NativeMp3Player.java
app/src/main/java/com/example/videorecorder/songstudio/recorder/: MockRecordProcessor.java  NativeRecordProcessor.java  RecordProcessor.java
app/src/main/java/com/example/videorecorder/songstudio/recording/: RecordingImplType.java
app/src/main/java/com/example/videorecorder/songstudio/recording/camera/exception/: CameraParamSettingException.java
app/src/main/java/com/example/videorecorder/songstudio/recording/camera/preview/: CameraConfigInfo.java  ChangbaRecordingPreviewScheduler.java  ChangbaRecordingPreviewView.java  ChangbaVideoCamera.java  PreviewFilterType.java
app/src/main/java/com/example/videorecorder/songstudio/recording/exception/: AudioConfigurationException.java  InitConsumerThreadFailException.java  InitLivePublisherFailException.java  InitPlayerFailException.java  InitRecorderFailException.java  RecordingStudioException.java  RecordingStudioNullArgumentException.java  StartRecordingException.java
app/src/main/java/com/example/videorecorder/songstudio/recording/service/: AbstractPlayerServiceImpl.java  PlayerService.java  RecorderService.java
app/src/main/java/com/example/videorecorder/songstudio/recording/service/factory/: PlayerServiceFactory.java  RecorderServiceFactory.java
app/src/main/java/com/example/videorecorder/songstudio/recording/service/impl/: AudioRecordRecorderServiceImpl.java  AudioTrackPlayerServiceImpl.java
app/src/main/java/com/example/videorecorder/songstudio/recording/video/: CommonVideoRecordingStudio.java  VideoRecordingStudio.java
app/src/main/java/com/example/videorecorder/songstudio/recording/video/service/: MediaRecorderService.java
app/src/main/java/com/example/videorecorder/songstudio/recording/video/service/factory/: MediaRecorderServiceFactory.java
app/src/main/java/com/example/videorecorder/songstudio/recording/video/service/impl/: MediaRecorderServiceImpl.java
app/src/main/java/com/example/videorecorder/songstudio/util/: Base64.java  DesEncode.java
app/src/main/java/com/example/videorecorder/songstudio/video/encoder/: HWEncoderServerBlackListHelper.java  MediaCodecEncoderLifeCycle.java  MediaCodecMemoryEncoder.java  MediaCodecSurfaceEncoder.java
app/src/main/java/com/example/videorecorder/utils/: FilePathUtil.java  StringUtil.java
app/src/main/res/layout/: activity_main.xml  activity_video_recorder.xml
app/src/main/res/values/: colors.xml  strings.xml
gradle/: libs.versions.toml
gradle/wrapper/: gradle-wrapper.properties
